force-app/main/default/objects/AOB_Application__c/fields/AOB_Client__c.field-meta.xml
<CustomField>
    <fullName>AOB_Client__c</fullName>
    <inlineHelpText>Parent Account</inlineHelpText>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>