force-app/main/default/objects/AOB_Application__c/fields/AOB_CurrentScreen__c.field-meta.xml
<CustomField>
    <fullName>AOB_CurrentScreen__c</fullName>
    <inlineHelpText>What screen should the user see when they open this app ?</inlineHelpText>
    <label>Current Screen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>