force-app/main/default/objects/AOB_Application__c/fields/AOB_DaysUptoExpiry__c.field-meta.xml
<CustomField>
    <fullName>AOB_DaysUptoExpiry__c</fullName>
    <formula>AOB_ExpiryDate__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining days until expiry</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>