force-app/main/default/objects/AOB_Application__c/fields/AOB_Expired__c.field-meta.xml
<CustomField>
    <fullName>AOB_Expired__c</fullName>
    <formula>TODAY() -  DATEVALUE(CreatedDate)  &gt;7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is Expired</label>
    <type>Checkbox</type>
</CustomField>