force-app/main/default/objects/AOB_Application__c/fields/AOB_ExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>AOB_ExpiryDate__c</fullName>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>