force-app/main/default/objects/AOB_Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AOB_Expired__c</columns>
    <columns>AOB_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>